# ros-multicamera

./: LICENSE
detecttrack/: CMakeLists.txt  README.md  package.xml
detecttrack/include/: multi_kf_tracker.h  object_detection_ssd.h
detecttrack/include/utilities/: kalman.h  tracked_object.h
detecttrack/launch/: detection_track_demo.launch  object.launch  object_detection_ssd.launch  object_detection_ssd_realsense.launch  test.launch  track.launch
detecttrack/msg/: Object.msg
detecttrack/rviz/: demo.rviz
detecttrack/rviz/backup/: main_backup.cpp
detecttrack/src/multi_kf_tracker/: main.cpp  multi_kf_tracker.cpp  test.py
detecttrack/src/object_detection_ssd/: main.cpp  object_detection_ssd.cpp
