<?xml version="1.0"?>
<package format="2">
  <name>detecttrack</name>
  <version>0.0.0</version>
  <description>The ros_vino package</description>
  <maintainer email="songshan_you@hotmail.com">You Songshan</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>InferenceEngine</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>InferenceEngine</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>InferenceEngine</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>
  <build_depend>roslint</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
